# net-use

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
openspec/changes/add-ipv4-ipv6-order-toggle/: design.md  tasks.md
openspec/changes/add-tui-ip-list-scrolling/: design.md  tasks.md
openspec/changes/archive/2026-02-27-add-ipv6-mask-toggle/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-net-use/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-show-cli-process-when-running/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-add-ipv4-ipv6-order-toggle/: proposal.md
openspec/changes/archive/2026-02-28-add-tui-ip-list-scrolling/: design.md  (+2 more)
openspec/changes/copy-uses-visible-sort-order/: design.md  proposal.md  tasks.md
openspec/changes/persist-address-history-in-working-directory/: tasks.md
openspec/changes/persist-app-monitoring-until-pause/: design.md  proposal.md  tasks.md
openspec/changes/persist-process-address-history/: tasks.md
openspec/changes/show-monitored-status-in-app-list/: proposal.md
openspec/changes/update-ipv4-segment-numeric-sort/: tasks.md
openspec/specs/app-discovery/: spec.md
openspec/specs/cli-output/: spec.md
openspec/specs/connection-collector/: spec.md
openspec/specs/process-monitor/: spec.md
openspec/specs/tui/: spec.md
src/: app.rs  main.rs  types.rs
src/discovery/: installed_apps.rs  mod.rs  running_apps.rs
src/monitor/: aggregator.rs  connection.rs  mod.rs  process_tree.rs
src/tui/: app_selector.rs  event.rs  mod.rs  monitor_view.rs
(+31 files in other folders)
