[package]
name = "net-use"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
plist = "1"
anyhow = "1"
thiserror = "2"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
